# Store

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Readme.md  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py
core/: Structure.md
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: models.py
core/apps/customers/: admin.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/models/: customers.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: reviews.py
core/apps/products/exeptions/: products.py  reviews.py
core/project/: containers.py  urls.py  wsgi.py
core/project/settings/: local.py  main.py
docker_compose/: app.yaml  storages.yaml
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  AppRoutes.tsx  index.css
frontend/src/Ui/: BigProductCard.tsx  Button.tsx  SmallProductCard.tsx
frontend/src/components/: AfterSingUpComponent.tsx  LoginForm.tsx
frontend/src/redux/: rootReducers.ts  store.ts
frontend/src/utils/: functions.ts  validateSchema.ts
store_backend/: README.md
store_backend/config/: settings.py
test/services/: test_products.py
(+117 files in other folders)
